// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item with full filled props 1`] = `
<div
  className="sc-bcXHqe jDsvTA"
>
  <div
    className="sc-gswNZR sc-dkrFOg  gjmsdx"
  >
    item1Name
  </div>
  <div
    className="sc-gswNZR"
  >
    <span
      className="sc-hLBbgP jUjwA-D"
    >
      overview
    </span>
     
    overview1
  </div>
  <div
    className="sc-gswNZR"
  >
    <span
      className="sc-hLBbgP jUjwA-D"
    >
      original language
    </span>
     
    en
  </div>
</div>
`;

exports[`Item with only required props 1`] = `
<div
  className="sc-bcXHqe jDsvTA"
>
  <div
    className="sc-gswNZR sc-dkrFOg  gjmsdx"
  >
    item1Name
  </div>
</div>
`;
